# kist

./: README.md
mrl_crawling_robot/: CMakeLists.txt  package.xml
mrl_crawling_robot/include/mrl_crawling_robot/: define.h  dynamixel_funtion.h
mrl_crawling_robot/src/: position_control.cpp
rh_p12_rn_control/: CMakeLists.txt  package.xml  readme.md
rh_p12_rn_control/src/: control.cpp
